# supervised-domainnet

./: .gitignore  pyproject.toml
apptainer/: environment.def
supervised_domainnet/: model.py  train.py
supervised_domainnet/configs/: base.yaml  debug.yaml
supervised_domainnet/data_modules/: domainnet_dm.py
supervised_domainnet/datasets/: domainnet_dataset.py
supervised_domainnet/run/: domainnet.sh
